param ok user(alone)  add  & read

--- a/WebContent/resources/template/footer.xhtml
+++ b/WebContent/resources/template/footer.xhtml
@@ -8,7 +8,8 @@
 	  
 <body>
 	<ui:composition>
-		<h1>Default Footer</h1>
+			<h1>#{msg['footer.title']}</h1>
+			<p>#{msg['footer.info']}</p>
 	</ui:composition>
 </body>
 </html>
